--- a/index.html
+++ b/index.html
@@ -193,7 +193,23 @@
             Registrar
         </button>
     </div>
-
+<footer style="
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+    text-align: center;
+    font-size: 0.85em;
+    color: #777;
+    padding: 0 20px;
+    box-sizing: border-box;
+">
+    ¿Tienes sugerencias? Escríbeme a 
+    <a href="mailto:gonzalo.benites.dev@gmail.com" style="color: #444; text-decoration: underline;">gonzalo.benites.dev@gmail.com</a><br>
+    ¿Te sirve esta herramienta? 
+    <a href="https://www.buymeacoffee.com/gnzbenitesh" target="_blank" style="color: #FF5F5F; text-decoration: none; font-weight: bold;">
+        ☕ Invítame un café
+    </a>
+</footer>
     <script>
         let numeroSerie = 0;
         let intervaloCronometro = null;
