--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     box-sizing: border-box;
 ">
     ¿Tienes sugerencias? Escríbeme a 
-    <a href="mailto:gonzalo.benites.dev@gmail.com" style="color: #444; text-decoration: underline;">gonzalo.benites.dev@gmail.com</a><br>
+    <a href="mailto:benitesgonzalogaston@gmail.com" style="color: #444; text-decoration: underline;">gonzalo.benites.dev@gmail.com</a><br>
     ¿Te sirve esta herramienta? 
     <a href="https://www.buymeacoffee.com/gnzbenitesh" target="_blank" style="color: #FF5F5F; text-decoration: none; font-weight: bold;">
         ☕ Invítame un café
